--- a/examples/index.html
+++ b/examples/index.html
@@ -9,5 +9,7 @@
 	<body>
 		<div id="app"></div>
 		<script type="module" src="/src/main.js"></script>
+		<!-- <script src="https://static.kdwjy.com/element-ui/2.15.13/index.min.js"></script> -->
+		<!-- <script src="https://static.kdwjy.com/element-plus/2.4.4/index.full.min.js"></script> -->
 	</body>
 </html>
